<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </LinearLayout>
    <EditText
        android:id="@+id/idCorreoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/idContraseñaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:background="@drawable/border"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/idLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:layout_margin="15dp"
        android:hint="@string/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_weight="1">
        <Button
            android:id="@+id/idRegistroLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:layout_margin="15dp"
            android:hint="@string/registrarse"/>
    </LinearLayout>
</LinearLayout>